basic design complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <header>
+        <center>
+        <h1 id="headerHeading">Banana translating App</h1>
+        </center>
+    </header>
+    <textarea id="txt-Box"></textarea>
+    <button>translate</button>
 </body>
 </html>
