--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.js"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <header>
         <center>
-        <h1 id="headerHeading">Banana translating App</h1>
+            <h1 id="headerHeading">Banana translating App</h1>
         </center>
     </header>
     <textarea id="txt-Box"></textarea>
     <button>translate</button>
+    <input type="text" name="translator">
+    <script src="./index.js"></script>
 </body>
 </html>
